include $(top_srcdir)/Makefile.common

SUBDIRS = src config
DIST_SUBDIRS = src config

#EXTRA_DIST = \
#	bootstrap		\
#	configure 		\
#	config.h.in		
#	gsm-receiver.pc.in

#pkgconfigdir = $(libdir)/pkgconfig
#pkgconfig_DATA = gsm-receiver.pc

EXTRA_DIST = \
	gsm-receiver.pc.in
    
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gsm-receiver.pc
    