#
# Copyright 2001,2002,2004,2005,2006,2007,2008 Free Software Foundation, Inc.
# 
# This file is part of GNU Radio
# 
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
# 
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
# 

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libopenbtsdecoder.la

libopenbtsdecoder_la_SOURCES = \
BitVector.cpp \
GSM610Tables.cpp \
GSM660Tables.cpp \
GSM690Tables.cpp \
GSMCommon.cpp	\
GSML1FEC.cpp	\
GSMTDMA.cpp	\
Threads.cpp	\
Timeval.cpp	


noinst_HEADERS = 	\
Assert.h	\
BitVector.h	\
GSM610Tables.h	\
GSM660Tables.h	\
GSM690Tables.h	\
GSMCommon.h	\
GSML1FEC.h	\
GSMTDMA.h	\
RxBurst.h	\
Threads.h	\
Timeval.h	\
Vector.h	\
VocoderFrame.h
